Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43081

QSplashScreen's showMessage() misplaces message

XMLWordPrintable

    • 98ad498a46471d43a745cc61fd53e08e8a6b56dc

      QSplashScreen's showMessage() misplaces the message when the message contains embedded HTML formatting codes. For example,

      const Qt::Alignment pos = Qt::AlignBottom | Qt::AlignRight;
      splash->showMessage(QObject::tr("<b>Creating Main Window...</b>"), pos, Qt::black);
      

      will display the message in the upper right corner with the flags, and works correctly if they are not present in the text string.

        1. qtbug_43081.tgz
          1 kB
        2. qtbug43081.zip
          155 kB
        For Gerrit Dashboard: QTBUG-43081
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            emperor7777 James Demers
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes